--- a/yellowpages/src/main/res/layout/yp_search_results_list_item.xml
+++ b/yellowpages/src/main/res/layout/yp_search_results_list_item.xml
@@ -25,7 +25,7 @@
             android:id="@+id/tv_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/yp_colorAccent"
             />
 
 
